traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:3: error: not found: value getWordlHeight
val y = getWordlHeight();
        ^