traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;
var n = 0;
val x = getWorldWidth();
val y = getWordlHeight();


override def run() {
  while (! isInPosition(x,y)) {
    
  }
}



def isInPosition(x: Int, y: Int):Boolean = {
  if ( (x -1 == getX()) && (y -1 == getY())) {
    writeMessage(x * y -1)
    return true
  }
  else {return false}
}